<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pendenz_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PendenzActivity">

    <LinearLayout
        android:id="@+id/title_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/title_input"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/title" />

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            tools:ignore="Autofill" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/priority_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_group">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/date_input"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/date" />

        <EditText
            android:id="@+id/date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="date"
            android:onClick="openDatePicker"
            tools:ignore="Autofill">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/priority_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/date_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/date_group"
        app:layout_constraintTop_toTopOf="@id/date_group">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/priority_input"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/priority" />

        <Spinner
            android:id="@+id/priority_input"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/prioritys"
            android:paddingLeft="0dp"
            android:paddingRight="0dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/description_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priority_group">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/description_input"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLength="500"
            tools:ignore="Autofill" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>