<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.MainActivity">



    <item
        android:id="@+id/delete_button"
        android:icon="@mipmap/baseline_delete_white_48dp"
        app:showAsAction="always"
        android:title="@string/delete_button_title" />

    <item
        android:id="@+id/cancel_button"
        android:icon="@mipmap/baseline_close_white_48dp"
        app:showAsAction="ifRoom"
        android:title="@string/cancel_button_title"/>

    <item
        android:id="@+id/save_button"
    android:icon="@mipmap/baseline_done_white_48dp"
    app:showAsAction="always"
    android:title="@string/save_button_title" />

</menu>